see: add timeout

--- a/bot.yml
+++ b/bot.yml
@@ -1,5 +1,5 @@
-name: null
-tag: null
+name: seeAi
+tag: latest
 deleted_at: null
 desc: ''
 timezone: 7
@@ -29,6 +29,7 @@ flows:
                         - Ketik "Halo" untuk mulai mengobrol dengan See!
                         - Ketik "Halo" untuk bertanya kepada See!
                         - Ketik "Halo" untuk berbincang dengan See!
+        methods: {}
     greeting:
         active: true
         volatile: false
@@ -44,11 +45,11 @@ flows:
                     greetUser:
                         condition: intent=="getStarted"
                         mapping:
-                            context:
-                                userId: metadata.lineSenderId
-                                token: metadata.lineAccessToken
+                            context.userId: metadata.lineSenderId
+                            context.token: metadata.lineAccessToken
                 initial: true
             greetUser:
+                transitions: {}
                 action:
                     -
                         name: callLineAPI
@@ -75,8 +76,10 @@ flows:
                 type: text
                 options:
                     text: Ketik "Halo" untuk memulai mengobrol. Ketik "Materi" untuk melihat apa saja yang See ketahui.
+        methods: {}
     halo:
         active: true
+        expire: 120000
         volatile: false
         intents:
             sapa:
@@ -126,9 +129,11 @@ flows:
                     -
                         name: ada
             tidakBantu:
+                transitions: {}
                 action: tidakBantu
                 end: false
             adaBantu:
+                transitions: {}
                 action: adaBantu
                 end: false
         actions:
@@ -179,8 +184,10 @@ flows:
                     text:
                         - Baik kalau begitu. Terima kasih telah mengobrol denganku!
                         - 'Sepertinya cukup begitu, yah. Terima kasih telah menghubungiku!'
+        methods: {}
     materi:
         active: true
+        expire: 120000
         volatile: false
         intents:
             materi:
@@ -213,8 +220,7 @@ flows:
                         fallback: true
                         condition: intent=="pilihanMateri"
                         mapping:
-                            context:
-                                materi: payload.materi
+                            context.materi: payload.materi
                     materi:
                         fallback: true
                 action:
@@ -366,6 +372,7 @@ flows:
                 type: text
                 options:
                     text: Silahkan pilih salah satu topik yang ingin kamu ketahui!
+        methods: {}
     pubertas:
         active: true
         volatile: false
@@ -487,8 +494,7 @@ flows:
                     mens:
                         condition: intent=="mens"
                         mapping:
-                            context:
-                                mens: intent
+                            context.mens: intent
                     yangKamuAlami:
                         condition: intent=="sudahPuber"
                     tandaPuber:
@@ -496,8 +502,7 @@ flows:
                     mimpiBasah:
                         condition: intent=="mimpiBasah"
                         mapping:
-                            context:
-                                mimpiBasah: intent
+                            context.mimpiBasah: intent
                     tandaPuberYangDialami:
                         condition: intent=="tandaPuberYangDialami"
                     kapanPuber:
@@ -521,16 +526,14 @@ flows:
                     mimpiBasah:
                         condition: intent=="mimpiBasah"
                         mapping:
-                            context:
-                                mimpiBasah: intent
+                            context.mimpiBasah: intent
                     tandaPuberYangDialami:
                         condition: intent=="tandaPuberYangDialami"
                     mens:
                         fallback: false
                         condition: intent=="mens"
                         mapping:
-                            context:
-                                mens: intent
+                            context.mens: intent
                     yangKamuAlami:
                         fallback: true
                 action: tanya
@@ -662,8 +665,7 @@ flows:
                     mens:
                         condition: intent=="mens"
                         mapping:
-                            context:
-                                mens: intent
+                            context.mens: intent
                     tandaPuberYangDialami:
                         fallback: true
                 action:
@@ -844,6 +846,7 @@ flows:
                     text:
                         - Ketik "Halo" untuk memulai percakapan lagi denganku. Ketik "Materi" untuk melihat apa saja yang See ketahui.
                         - Ketik "Halo" untuk mengobrol kembali. Ketik "Materi" untuk melihat apa saja yang See ketahui.
+        methods: {}
     kontrasepsi:
         active: true
         volatile: false
@@ -974,6 +977,7 @@ flows:
                 action: thanks
                 end: false
             pertanyaanApaItu:
+                transitions: {}
                 action: apaItu
             terimaKasih:
                 transitions:
@@ -981,6 +985,7 @@ flows:
                         condition: intent=="samasama"
                 action: terimaKasih
             haloLagi:
+                transitions: {}
                 action: haloLagi
         actions:
             penjelasanKontrasepsi:
@@ -1036,6 +1041,7 @@ flows:
                     text:
                         - Ketik "Halo" untuk memulai percakapan lagi denganku. Ketik "Materi" untuk melihat apa saja yang See ketahui.
                         - Ketik "Halo" untuk mengobrol kembali. Ketik "Materi" untuk melihat apa saja yang See ketahui.
+        methods: {}
     seks:
         active: true
         volatile: false
@@ -1337,6 +1343,7 @@ flows:
                         name: tanyaLagi
                 end: false
             pertanyaanApaItu:
+                transitions: {}
                 action: apaItu
             terimaKasih:
                 transitions:
@@ -1344,6 +1351,7 @@ flows:
                         condition: intent=="samasama"
                 action: terimaKasih
             haloLagi:
+                transitions: {}
                 action: haloLagi
         actions:
             pengertianJenisKelamin:
@@ -1448,6 +1456,7 @@ flows:
                 type: text
                 options:
                     text: 'Ada beberapa faktor yang menentukan jenis kelamin salah satunya hormon. Untuk mengetahuinya, ketik "peran hormon".'
+        methods: {}
     organReproduksi:
         active: true
         volatile: false
@@ -1891,6 +1900,7 @@ flows:
                     -
                         name: lanjutMerawat
             pertanyaanApaItu:
+                transitions: {}
                 action: apaItu
             caraMerawat:
                 transitions:
@@ -1909,6 +1919,7 @@ flows:
                         condition: intent=="samasama"
                 action: terimaKasih
             haloLagi:
+                transitions: {}
                 action: haloLagi
         actions:
             ereksi:
@@ -2051,6 +2062,7 @@ flows:
                         - Terima kasih
                         - Baik kalau begitu. Terima kasih telah mengobrol denganku!
                         - 'Sepertinya cukup begitu, yah. Terima kasih telah menghubungiku!'
+        methods: {}
     penyakitMenularSeksual:
         active: true
         volatile: false
@@ -2193,8 +2205,7 @@ flows:
                     -
                         name: tanya
                 transit:
-                    context:
-                        answer: intent
+                    context.answer: intent
             hivaids:
                 transitions:
                     gonorrhea:
@@ -2331,8 +2342,10 @@ flows:
                     -
                         name: terimaKasih
             haloLagi:
+                transitions: {}
                 action: haloLagi
             pertanyaanApaItu:
+                transitions: {}
                 action: apaitu
         actions:
             pengertian:
@@ -2437,6 +2450,7 @@ flows:
                         - Apakah itu kalau See boleh tau?
                         - Coba jelaskan ke See apa itu?
                         - Apakah itu?
+        methods: {}
 nlus:
     basic:
         type: nl
@@ -2526,3 +2540,5 @@ nlus:
                     - tidak
                     - Tidak
                     - TIDAK
+methods: {}
+config: {}
